2006-09-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/color.h, src/color.cpp: Migrate Color class out of
	vertexarray files, to allow further colormaps (e.g., color by
	other atomic or residue properties).

	* src/*: Use Color() class.

2006-08-31  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Added group selection.  see GLWidget::selectRegion()

2006-08-30  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/Primitives.h: moved the glnametypeing enum to here as
	enum primativeType
	
	* src/Primitives.cpp: Overwrote OBMol::CreateResidue (trunk
	version of OB)

	* src/GLWidget.cpp: _hits now containts both .type and .name 
	corresponding to the type if hit and the name of the hit.

2006-08-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/MainWindow.h, src/MainWindow.cpp, src/GLWidget.h,
	src/GLWidget.cpp: Move molecule storage (for now) to the GL widget
	to allow atom selection.

	* src/Primitives.h: Add marker to indicate that a particular
	object was selected by the user.

	* src/Views.h, src/Views.cpp: Add support for ResidueView, as well
	as whole-molecule rendering.

	* src/engines/ResidueSphereEngine.*: New render engine drawing
	spheres for residues in PDB files. Illustrates whole molecule
	render option.

	* src/GLEngine.h: Add glSelection enum for glPushName() entries to
	deliniate between molecule, atom, bond, residue,
	etc. picking. Render engines are responsible for using these as
	appropriate for a particular user view.

	* src/engines/*: Update for glPushName() for atoms and hilights
	when an atom is selected.

2006-08-29  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Initial group selection code.  Needs work
	still.  When you double-click to open a file it registers the
	mouse as having moved.  This generates a selection box.

2006-08-28  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Using perspective on 3d views.  There is also